Пересбор проекта 2, нет сериализации для кэша